--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/GameFinal.loader.js";
+      var loaderUrl = buildUrl + "/build12.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GameFinal.data.br",
-        frameworkUrl: buildUrl + "/GameFinal.framework.js.br",
-        codeUrl: buildUrl + "/GameFinal.wasm.br",
+        dataUrl: buildUrl + "/build12.data",
+        frameworkUrl: buildUrl + "/build12.framework.js",
+        codeUrl: buildUrl + "/build12.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "FunnyBunnyB",
         productName: "FunnyBunny",
