--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build13.loader.js";
+      var loaderUrl = buildUrl + "/par2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build13.data",
-        frameworkUrl: buildUrl + "/build13.framework.js",
-        codeUrl: buildUrl + "/build13.wasm",
+        dataUrl: buildUrl + "/par2.data",
+        frameworkUrl: buildUrl + "/par2.framework.js",
+        codeUrl: buildUrl + "/par2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "FunnyBunnyB",
         productName: "FunnyBunny",
