--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/par2.loader.js";
+      var loaderUrl = buildUrl + "/paradoteo2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/par2.data",
-        frameworkUrl: buildUrl + "/par2.framework.js",
-        codeUrl: buildUrl + "/par2.wasm",
+        dataUrl: buildUrl + "/paradoteo2.data",
+        frameworkUrl: buildUrl + "/paradoteo2.framework.js",
+        codeUrl: buildUrl + "/paradoteo2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "FunnyBunnyB",
         productName: "FunnyBunny",
