--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FinalParadoteo3.loader.js";
+      var loaderUrl = buildUrl + "/FinalParadoteoTeliko.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FinalParadoteo3.data.gz",
-        frameworkUrl: buildUrl + "/FinalParadoteo3.framework.js.gz",
-        codeUrl: buildUrl + "/FinalParadoteo3.wasm.gz",
+        dataUrl: buildUrl + "/FinalParadoteoTeliko.data",
+        frameworkUrl: buildUrl + "/FinalParadoteoTeliko.framework.js",
+        codeUrl: buildUrl + "/FinalParadoteoTeliko.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "FunnyBunnyB",
         productName: "FunnyBunny",
